<?xml version="1.0" encoding="utf-8"?>
<resources>

   
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
      <!--  星期  --> 
  <string name="Mon">一</string> 
  <string name="Tue">二</string> 
  <string name="Wed">三</string> 
  <string name="Thu">四</string> 
  <string name="Fri">五</string> 
  <string name="Sat">六</string> 
  <string name="Sun">日</string> 
 
    <string name="app_name">Seven days</string>
    <string name="myyuedu_import_freezone">编辑</string>
    <string name="myyuedu_import_pc">删除</string>
    <string name="myyuedu_import_sdcard">新建</string>
   

</resources>
