<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg" >

   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="53.0dip"
      
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/btn_prev_month"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="xxxx年14月"
               
                android:textSize="21.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_next_month"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="今天"
                android:gravity="center"
                android:textColor="#ff000000"
                android:textSize="16.0dip"  />
           
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="22.0dip"
        android:background="@drawable/back_today" >

        <TextView
            style="@style/weekName"
            android:text="@string/Sun" />

        <TextView
            style="@style/weekName"
            android:text="@string/Mon" />

        <TextView
            style="@style/weekName"
            android:text="@string/Tue" />

        <TextView
            style="@style/weekName"
            android:text="@string/Wed" />

        <TextView
            style="@style/weekName"
            android:text="@string/Thu" />

        <TextView
            style="@style/weekName"
            android:text="@string/Fri" />

        <TextView
            style="@style/weekName"
            android:text="@string/Sat" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:clickable="true"
        android:clipChildren="true"
        android:columnWidth="55.0dip"
        android:horizontalSpacing="1.0dip"
        android:listSelector="@null"
        android:numColumns="7"
        android:paddingBottom="1.0dip"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1.0dip" />
     <TextView
        android:id="@+id/tv_show"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text=""
        
        android:layout_marginTop="30dip"
      
        android:textColor="#000000"
        android:textSize="18.0dip"
       />

</LinearLayout>